# nodio

./: .gitmodules  CMakeLists.txt  Cargo.toml  README.md  _main.cpp  main.cpp  omain.cpp
src/: CMakeLists.txt  _main.rs  emain.rs  main.rs
src/gui/: graph.rs  mod.rs
