[package]
name = "nodio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
cpal = "0.15.3"
eframe = "0.27.2"
egui = "0.27.2"
egui_nodes = "0.1.3"
epi = "0.17.0"
ringbuf = "0.4.1"
tracing-subscriber = "0.3.18"
